02.AWS-EKS/00.Istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: itm-ist-gtw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway  # istio의 기본 ingress gateway를 사용
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
